[package]
name = "walnut"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[dependencies]
bitflags = "1"
byteorder = "1"
log = "0.4"
walkdir = "2"
pretty_env_logger = "0.2"

[dev-dependencies]
criterion = "0.2"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["ntdef"] }

[profile.release]
lto = true
